[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdomainsbrute"
version = "2.0.0"
description = "A fast subdomain brute-forcing tool for penetration testers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "lijiejie", email = "my@lijiejie.com"}
]
keywords = ["subdomain", "dns", "brute-force", "security", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiodns>=3.0",
    "aiofiles>=23.0",
]

[project.scripts]
subdomainsbrute = "subDomainsBrute:main"

[project.urls]
Homepage = "https://github.com/lijiejie/subDomainsBrute"
Issues = "https://github.com/lijiejie/subDomainsBrute/issues"
